# PixelArt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_PUSH_GUIDE.md  LICENSE  MANIFEST.in  README.md  READY_FOR_GITHUB.md  RELEASE_NOTES_v2.md  SECURITY.md  adjusted_colors.xlsx  debug_colors.py  debug_content_rows.py  debug_crop.py  debug_white.py  example.py  fix_script.py  perler_bead_detector.py  pyproject.toml  requirements.txt  test_detector.py  test_scroll.html  test_uploaded_image.py  uploaded_colors.txt
.github/: pull_request_template.md  repo.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
docs/: ALGORITHM.md  GITHUB_DEPLOYMENT.md  PROJECT_STRUCTURE.md  TROUBLESHOOT.md
examples/: quickstart.py
scripts/: push_to_github.sh
src/: __init__.py  color_mapper.py  color_processing.py  config.py  grid_detection.py  perler_bead_detector.py
web/: README.md  app.py
web/static/: fix_script.js  script.js  script.js.backup_20260205_224457  script_fixes.patch  style.css
web/templates/: index.html
